--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<link rel="stylesheet" type="text/css" href="styles.css" />
+    <html>
+        <head>
+            <meta name="description" content="My github">
+        </head>
+
+        <body>
+        <div class="myDiv">
+            <h1>This is my first sentence</h1>
+            <h2> This is my second sentence</h2>
+        </div>
+        
+        <div class="myDiv">
+            <a href="https://www.w3schools.com/html/html_links.asp">I'm hosted with GitHub Pages.</a>
+            <img id="myImage" src = "Spikeball.jpg">
+        </div>
+      
+        </body>
+
+    </html>
