--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="styles.css" />
+
     <html>
         <head>
+            <link rel="stylesheet" type="text/css" href="stylesheet.css" />
             <meta name="description" content="My github">
         </head>
 
         <body>
         <div class="myDiv">
             <h1>This is my first sentence</h1>
-            <h2> This is my second sentence</h2>
+            <h1> This is my second sentence</h1>
         </div>
         
         <div class="myDiv">
